--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <label for="premium" class="mb-0">Minecraft Java or Bedrock?</label>
                 </div>
                 <div class="form-group col-md-6 order-md-1">
-                    <select class="form-control bg-dark text-light" id="premium" name="platform" required="">
+                    <select class="form-control bg-dark text-light" id="premium" name="amehi" required="">
                         <option value="">Select Option</option>
                         <option value="premium">Premium </option>
                         <option value="Cracked">Cracked </option>
