--- a/index.html
+++ b/index.html
@@ -31,17 +31,27 @@
             </div>
             <hr>
             <div class="form-row">
-                <div class="form-group col-md-6 d-flex align-items-center">
-                    <label for="premium" class="mb-0">Minecraft Java or Bedrock?</label>
-                </div>
                 <div class="form-group col-md-6">
-                    <select class="form-control bg-dark text-light" id="premium" name="platform" required>
+                    <label for="minecraftType" class="mb-0">Minecraft Java or Bedrock?</label>
+                    <br>
+                    <select class="form-control bg-dark text-light" id="minecraftType" name="platform" required>
                         <option value="">Select Option</option>
                         <option value="JAVA">Java <i class="fas fa-gem"></i></option>
                         <option value="bedrock">Bedrock <i class="fas fa-compact-disc"></i></option>
                     </select>
                 </div>
-            </div><br>
+                <div class="form-group col-md-6">
+                    <label for="premium" class="mb-0">Minecraft Premium Cracked?</label>
+                    <br>
+                    <select class="form-control bg-dark text-light" id="premium" name="amehi" required="">
+                        <option value="">Select Option</option>
+                        <option value="premium">Premium </option>
+                        <option value="Cracked">Cracked </option>
+                    </select>
+                </div>
+            </div>
+            
+            <!-- </div>
             <div class="form-row">
                 <div class="form-group col-md-6 order-md-2 d-flex align-items-center justify-content-end title">
                     <label for="premium" class="mb-0">Minecraft Premium Cracked?</label>
@@ -53,7 +63,7 @@
                         <option value="Cracked">Cracked </option>
                     </select>
                 </div>
-            </div>
+            </div> -->
             
             <hr>
             <!-- Have you been banned section -->
