--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               </div>
               <div class="form-group" id="bannedReasonContainer" style="display: none;">
                 <label for="bannedReason">Why?</label>
-                <input type="text" class="form-control bg-dark" id="bannedReason" name="bannedReason" disabled>
+                <input type="text" class="form-control bg-dark text-light" id="bannedReason" name="bannedReason" disabled>
               </div>
             <div>
             </center>
@@ -107,11 +107,27 @@
                     <label for="serverPlaytime">Server Playtime (hours):</label>
                     <input type="number" class="form-control bg-dark text-light" id="serverPlaytime" name="serverPlaytime" min="1" step="0.5" required>
                 </div>
-                
                 <div class="form-group col-md-4">
                     <label for="minecraftPlaytime">Minecraft PlayPeriod  :</label>
-                    <input type="date" class="form-control bg-warning text-dark" id="minecraftPlaytime" name="minecraftPlaytime"
-                        placeholder="Example: From what year " required>
+                    <select class="form-control bg-warning text-dark" id="minecraftPlaytime" name="minecraftPlaytime" required>
+                        <option value="">Select Year</option>
+                        <option value="2009">2009</option>
+                        <option value="2010">2010</option>
+                        <option value="2011">2011</option>
+                        <option value="2012">2012</option>
+                        <option value="2013">2013</option>
+                        <option value="2014">2014</option>
+                        <option value="2015">2015</option>
+                        <option value="2016">2016</option>
+                        <option value="2017">2017</option>
+                        <option value="2018">2018</option>
+                        <option value="2019">2019</option>
+                        <option value="2020">2020</option>
+                        <option value="2021">2021</option>
+                        <option value="2022">2022</option>
+                        <option value="2023">2023</option>
+                        <option value="2024">2024</option>
+                    </select>
                 </div>
             </div>
             <br><br>
