Add meta tags and favicon for improved SEO and social sharing
This commit adds various meta tags for Open Graph and Twitter, as well as a new favicon for the website. These changes should improve the way the website is displayed on social media

--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minecraft.tn Whitelist Application</title>
-    <link rel="shortcut icon" href="src/logo.png" type="image/x-icon">
+
+    <meta name="title" content="play.minecraft.tn" />
+    <meta name="description" content="whitelist for THE #1 TUNISIAN MINECRAFT SERVER" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://whitelist-tn.vercel.app/" />
+    <meta property="og:title" content="play.minecraft.tn" />
+    <meta property="og:description" content="whitelist for THE #1 TUNISIAN MINECRAFT SERVER" />
+    <meta property="og:image" content="https://minecraft.tn/images/object1748698446.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="src/logo.png" />
+    <meta property="twitter:url" content="https://whitelist-tn.vercel.app/" />
+    <meta property="twitter:title" content="play.minecraft.tn " />
+    <meta property="twitter:description" content="whitelist for THE #1 TUNISIAN MINECRAFT SERVER" />
+    <meta property="twitter:image" content="https://minecraft.tn/images/object1748698446.png" />
+
+    <link rel="shortcut icon" href="src/server-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
