Update meta tags for social media sharing: changed Open Graph image and Twitter card image to a new server icon; updated corresponding image URLs.

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <meta property="og:url" content="https://whitelist-tn.vercel.app/" />
     <meta property="og:title" content="play.minecraft.tn" />
     <meta property="og:description" content="whitelist for THE #1 TUNISIAN MINECRAFT SERVER" />
-    <meta property="og:image" content="https://minecraft.tn/images/object1748698446.png" />
+    <meta property="og:image" content="https://media.discordapp.net/attachments/974019430533189713/1231688530544169024/server-icon.png?ex=6637de55&is=66256955&hm=d0f04f1b549641489c8b28d9431f4a7dc9e1af5f081d90b51bb70ebd64f55a27&=&format=webp&quality=lossless&width=80&height=80" />
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="src/logo.png" />
+    <meta property="twitter:card" content="https://media.discordapp.net/attachments/974019430533189713/1231688530544169024/server-icon.png?ex=6637de55&is=66256955&hm=d0f04f1b549641489c8b28d9431f4a7dc9e1af5f081d90b51bb70ebd64f55a27&=&format=webp&quality=lossless&width=80&height=80" />
     <meta property="twitter:url" content="https://whitelist-tn.vercel.app/" />
     <meta property="twitter:title" content="play.minecraft.tn " />
     <meta property="twitter:description" content="whitelist for THE #1 TUNISIAN MINECRAFT SERVER" />
-    <meta property="twitter:image" content="https://minecraft.tn/images/object1748698446.png" />
+    <meta property="twitter:image" content="https://media.discordapp.net/attachments/974019430533189713/1231688530544169024/server-icon.png?ex=6637de55&is=66256955&hm=d0f04f1b549641489c8b28d9431f4a7dc9e1af5f081d90b51bb70ebd64f55a27&=&format=webp&quality=lossless&width=80&height=80" />
 
     <link rel="shortcut icon" href="src/server-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
