--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                 <fieldset>
                   <legend class="text-center">Have you been banned from our/other server?</legend>
                   <div class="button-checkbox-group">
-                    <input type="radio" id="bannedYes" name="bannedStatus" value="yes" style="display: none;">
+                    <input type="radio" id="bannedYes" name="bannedStatus" value="no" style="display: none;">
                     <label class="button-checkbox btn btn-success" for="bannedNo"><i class="fas fa-check-circle"></i> Yes</label>
-                    <input type="radio" id="bannedNo" name="bannedStatus" value="no" style="display: none;" >
+                    <input type="radio" id="bannedNo" name="bannedStatus" value="yes" style="display: none;" >
                     <label class="button-checkbox btn btn-danger" for="bannedYes"><i class="fas fa-times-circle"></i> No</label>
                 </div>
                     <div style="display: none;" id="sa7it">
