--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <textarea class="form-control bg-dark text-light" id="additionalInfo" name="additionalInfo"></textarea>
             </div><br><hr>
 <input type="hidden" id="randomQuestionInput" name="randomQ" value="${randomQuestion}">
-            <input type="hidden" id="answer" name="answer" value="${rule answer}">
+            <input type="hidden" id="ruleAnswer" name="answer" value="${rule answer}">
             <button type="submit" id="submit" class="btn minecraft" style="display: none;">SUBMIT</button>
             <br>
             <div class="form-group">
