--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <label style="display: none;" id="sayee"><u>Hurry yalla submit </u></label>
             </div>
         </form><br>
-        <div id="successMessage" style="display: nne;">
+        <div id="successMessage" style="display: none;">
             <p>You will be contacted by a staff member shortly.</p>
             <h6 onclick="myFunction(event)" class="btn-outline-warning" style="background-color: rgb(13, 7, 46);width: 200px;">play.<span id="minecraft7amra">minecraft</span></span>.tn</h6>
             <br>
