Change input field name for rule answer and add new input field for storing answer value
- Change the name of the 'answer' input field to 'randomQuestion' in the HTML form and script.js
- Add a new input field

--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
                 <label for="additionalInfo">Additional Info:</label>
                 <textarea class="form-control bg-dark text-light" id="additionalInfo" name="additionalInfo"></textarea>
             </div><br><hr>
-<input type="hidden" id="randomQuestionInput" name="randomQ" value="${randomQuestion}">
-            <input type="hidden" id="ruleAnswer" name="answer" value="${rule answer}">
+            <input type="hidden" id="randomQuestionInput" name="randomQ" value="${randomQuestion}">
+            <input type="hidden" id="answerInput" name="randomQuestion" value="${answer}">
             <button type="submit" id="submit" class="btn minecraft" style="display: none;">SUBMIT</button>
             <br>
             <div class="form-group">
