Update random question generation and submission button display in index.html and script.js
- Change from using bitwise operator to multiply in calculating random question index
- Update hidden input field name for answer in index.html
- Change

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                 <textarea class="form-control bg-dark text-light" id="additionalInfo" name="additionalInfo"></textarea>
             </div><br><hr>
             <input type="hidden" id="randomQuestionInput" name="randomQ" value="${randomQuestion}">
-            <input type="hidden" id="answerInput" name="randomQuestion" value="${answer}">
-            <button type="submit" id="submit" class="btn minecraft" style="display: none;">SUBMIT</button>
+            <input type="hidden" id="answerInput" name="randomQuestion" value="${ruleAnswer}">
+            <button type="submit" id="submit" class="btn minecraft">SUBMIT</button>
             <br>
             <div class="form-group">
             <label style="display: none;" id="sayee"><u>Hurry yalla submit </u></label>
