--- a/index.html
+++ b/index.html
@@ -146,17 +146,18 @@
                     </div>
                 </fieldset>
             </div>
-            <br><br>
             <div class="form-group">
                 <label for="additionalInfo">Additional Info:</label>
                 <textarea class="form-control bg-dark text-light" id="additionalInfo" name="additionalInfo"></textarea>
+                
             </div><br><hr>
             <input type="hidden" id="randomQuestionInput" name="randomQ" value="${randomQuestion}">
             <input type="hidden" id="answerInput" name="randomQuestion" value="${ruleAnswer}">
             <button type="submit" id="submit" class="btn minecraft">SUBMIT</button>
             <br>
             <div class="form-group">
-            <label style="display: none;" id="sayee"><u>Hurry yalla submit </u></label>
+                <div class="pixelart-to-css"></div><br><br><br><br>
+            <label style="display: nne;" id="sayee">✨ Hurry yalla submit ✨</label>
             </div>
         </form><br>
         <div id="successMessage" style="display: none;">
