Update index.html: hide label by default, wrap pixelart-to-css in form-group with id "sayee"
This commit updates the index.html file by making the following changes:

1. The label with

--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
             <input type="hidden" id="answerInput" name="randomQuestion" value="${ruleAnswer}">
             <button type="submit" id="submit" class="btn minecraft">SUBMIT</button>
             <br>
-            <div class="form-group">
+            <div class="form-group" style="display: none;" id="sayee">
                 <div class="pixelart-to-css"></div><br><br><br><br>
-            <label style="display: nne;" id="sayee">✨ Hurry yalla submit ✨</label>
+            <label>✨ Hurry yalla submit ✨</label>
             </div>
         </form><br>
         <div id="successMessage" style="display: none;">
