"Updated logo image source from external CDN to local 'src/server-icon.png' file."

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <img class="logo align-content-center" src="https://cdn.discordapp.com/attachments/974019430533189713/1231688530544169024/server-icon.png?ex=6637de55&is=66256955&hm=d0f04f1b549641489c8b28d9431f4a7dc9e1af5f081d90b51bb70ebd64f55a27&"  alt="logo">
+                    <img class="logo align-content-center" src="src/server-icon.png"  alt="logo">
                 </div>
                 <div class="col-md-4"><br>
                     <h5>SUPPORT</h5>
